--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="navbar" id="nav">
                 <div class="items" id="logo">
                     <div class="img">
-                        <img src="/main1/Luxury and Vintage Ornamental Coffee Shop Logo.png" alt="LOGO">
+                        <img src="main1/Luxury and Vintage Ornamental Coffee Shop Logo.png" alt="LOGO">
                     </div>
                     <div class="burger" id="burger">
                         <button onclick="myfunction()">
@@ -297,13 +297,13 @@
                     <p>The Savory Heaven</p>
                 </div>
                 <div class="paraside">
-                    <img src="/main1/pngwing.com.png" alt="Food Image">
+                    <img src="main1/pngwing.com.png" alt="Food Image">
                 </div>
             </div>
         </div>
         <div class="about" id="ABOUTUS">
             <div class="ab" id="ab-1">
-                <img src="/main1/Chef-logo-design-illustration-on-transparent-PNG.png" alt="" srcset="">
+                <img src="main1/Chef-logo-design-illustration-on-transparent-PNG.png" alt="" srcset="">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto inventore delectus unde non aut vel deserunt voluptas quis aspernatur vitae officia assumenda, beatae placeat, dolor aperiam illo debitis enim soluta accusantium consequatur sequi asperiores, odit molestiae. Possimus nam magni</p>
             </div>
             <div class="ab" id="ab-2">
